--- a/app/src/main/res/layout/fragment_actors.xml
+++ b/app/src/main/res/layout/fragment_actors.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkBlue"
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     tools:context=".presentation.ui.fragments.ActorsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,73 +17,84 @@
             android:id="@+id/personsRv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/prev_btn"
+            app:layout_constraintBottom_toTopOf="@id/pageConstraint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:spanCount="2"
             tools:listitem="@layout/object_item_portrait" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/prev_btn"
-            style="@style/PrevBtnStyle"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="4dp"
-            android:text="prev"
-            app:icon="@drawable/ic_previous"
-            app:iconTint="@color/darkBlue"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pageConstraint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@id/personsRv"
+            app:layout_constraintStart_toStartOf="@id/personsRv">
 
-        <TextView
-            android:id="@+id/prev_page_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@id/prev_btn"
-            app:layout_constraintBottom_toBottomOf="@id/prev_btn"
-            app:layout_constraintEnd_toStartOf="@+id/current_page_text"
-            app:layout_constraintStart_toEndOf="@+id/prev_btn" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/prev_btn"
+                style="@style/PrevBtnStyle"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="4dp"
+                android:text="prev"
+                app:icon="@drawable/ic_previous"
+                app:iconTint="@color/darkBlue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/current_page_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/green"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/prev_btn" />
+            <TextView
+                android:id="@+id/prev_page_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/prev_btn"
+                app:layout_constraintEnd_toStartOf="@+id/current_page_text"
+                app:layout_constraintStart_toEndOf="@+id/prev_btn"
+                app:layout_constraintTop_toTopOf="@id/prev_btn" />
 
-        <TextView
-            android:id="@+id/next_page_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/prev_btn"
-            app:layout_constraintEnd_toStartOf="@+id/next_btn"
-            app:layout_constraintStart_toEndOf="@+id/current_page_text"
-            app:layout_constraintTop_toTopOf="@id/prev_btn" />
+            <TextView
+                android:id="@+id/current_page_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/prev_btn" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/next_btn"
-            style="@style/BtnNextStyle"
-            android:layout_marginEnd="10dp"
-            android:text="next"
-            app:icon="@drawable/ic_next"
-            app:iconGravity="end"
-            app:iconTint="@color/darkBlue"
-            app:layout_constraintBottom_toBottomOf="@id/prev_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/prev_btn" />
+            <TextView
+                android:id="@+id/next_page_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/prev_btn"
+                app:layout_constraintEnd_toStartOf="@+id/next_btn"
+                app:layout_constraintStart_toEndOf="@+id/current_page_text"
+                app:layout_constraintTop_toTopOf="@id/prev_btn" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/next_btn"
+                style="@style/BtnNextStyle"
+                android:layout_marginEnd="10dp"
+                android:text="next"
+                app:icon="@drawable/ic_next"
+                app:iconGravity="end"
+                app:iconTint="@color/darkBlue"
+                app:layout_constraintBottom_toBottomOf="@id/prev_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/prev_btn" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
