--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,9 +17,9 @@
     </style>
 
     <style name="ThemeOverlay.App.TabLayout" parent="">
+        <item name="tabIconTint">@color/icons_color</item>
         <item name="colorPrimary">@color/colorAccent</item>
-        <item name="colorSurface">@color/black</item>
-        <item name="colorOnSurface">@color/whiteTransparent</item>
+        <item name="colorOnSurface">@color/white</item>
     </style>
 
     <style name="MovieDetailsTextStyle.Italic" parent="MovieDetailsTextStyle">
@@ -60,7 +60,6 @@
     </style>
 
 
-
     <style name="MoviesCategoryCardViewStyle">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
@@ -71,4 +70,5 @@
         <item name="rippleColor">@color/colorAccent</item>
         <item name="layout_constraintDimensionRatio">1.3:1</item>
     </style>
+
 </resources>
