--- a/app/src/main/res/drawable/tab_layout_back.xml
+++ b/app/src/main/res/drawable/tab_layout_back.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/darkBlue" />
+    <solid android:color="@color/black" />
     <corners
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12dp" />
+        android:bottomLeftRadius="24dp"
+        android:bottomRightRadius="24dp" />
 
     <stroke
         android:width="2dp"
