--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -1,55 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBlue"
+    android:background="@color/black"
+    app:layoutDescription="@xml/fragment_movie_details_scene"
     tools:context=".presentation.ui.fragments.MovieDetailsFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="270dp"
-        android:background="@color/darkBlue"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/toolBarGuidline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolBar"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/posterImageCard"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginEnd="20dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/top_main_image"
+        app:layout_constraintEnd_toStartOf="@id/toolBarGuidline"
+        app:layout_constraintStart_toStartOf="@id/top_title_constraint"
+        app:layout_constraintTop_toBottomOf="@id/top_main_image"
+        app:strokeColor="@color/colorAccent"
+        app:strokeWidth="1dp">
+
+        <ImageView
+            android:id="@+id/poster_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/darkBlue"
-            app:expandedTitleMarginBottom="20dp"
-            app:expandedTitleMarginStart="15dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            android:scaleType="centerCrop" />
+    </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/moviePosterImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+    <ImageView
+        android:id="@+id/top_main_image"
+        android:layout_width="0dp"
+        android:layout_height="240dp"
+        android:background="@color/black"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:fitsSystemWindows="true"
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:backgroundTint="@color/darkBlue"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_title_constraint"
+        android:layout_width="0dp"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_marginStart="12dp"
+        app:layout_constraintEnd_toStartOf="@id/likeClick"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <TextView
+            android:id="@+id/top_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <ImageView
+        android:id="@+id/likeClick"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/ic_like_star"
+        app:layout_constraintEnd_toEndOf="@+id/top_main_image"
+        app:layout_constraintTop_toTopOf="@+id/top_main_image" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
+        android:layout_height="0dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/posterImageCard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/genConstraint"
@@ -61,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+                app:layout_constraintBottom_toTopOf="@+id/rvs_constraint_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -253,32 +293,13 @@
                     app:layout_constraintTop_toTopOf="@id/movieRuntime" />
 
                 <TextView
-                    android:id="@+id/movieGenres"
-                    style="@style/MovieDetailsTextStyle"
-                    android:layout_marginTop="@dimen/movieDetailsTextMarginTop"
-                    android:text="Жанры:"
-                    app:layout_constraintEnd_toEndOf="@id/movieTitle"
-                    app:layout_constraintStart_toStartOf="@id/movieTitle"
-                    app:layout_constraintTop_toBottomOf="@id/movieRuntime" />
-
-                <ListView
-                    android:id="@+id/genresListView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="@id/movieGenres"
-                    app:layout_constraintEnd_toEndOf="@id/title"
-                    app:layout_constraintStart_toStartOf="@id/title"
-                    app:layout_constraintTop_toTopOf="@id/movieGenres" />
-
-                <TextView
                     android:id="@+id/movieStatus"
                     style="@style/MovieDetailsTextStyle"
                     android:layout_marginTop="@dimen/movieDetailsTextMarginTop"
                     android:text="Статус:"
                     app:layout_constraintEnd_toEndOf="@id/movieTitle"
                     app:layout_constraintStart_toStartOf="@id/movieTitle"
-                    app:layout_constraintTop_toBottomOf="@id/movieGenres" />
+                    app:layout_constraintTop_toBottomOf="@id/movieRuntime" />
 
                 <TextView
                     android:id="@+id/status"
@@ -307,7 +328,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout"
+                android:id="@+id/rvs_constraint_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -353,18 +374,17 @@
                     app:layout_constraintStart_toStartOf="@id/actorsText"
                     app:layout_constraintTop_toBottomOf="@id/actorsRv" />
 
-                <Spinner
-                    android:id="@+id/videosSpinner"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/videos_titles_rv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:backgroundTint="@color/colorAccent"
-                    android:spinnerMode="dropdown"
-                    android:textAlignment="textEnd"
+                    android:layout_marginTop="2dp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/guideline3"
-                    app:layout_constraintTop_toTopOf="@id/videoText" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/videoText"
+                    tools:listitem="@layout/trailers_text_item_enabled" />
 
                 <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                     android:id="@+id/youtubePlayer"
@@ -373,8 +393,9 @@
                     app:autoPlay="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/videoText"
+                    app:layout_constraintTop_toBottomOf="@id/videos_titles_rv"
                     app:showFullScreenButton="false" />
+
 
                 <TextView
                     android:id="@+id/similarMoviesText"
@@ -424,4 +445,5 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
+
