--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBlue"
+    android:background="@color/black"
     tools:context=".presentation.ui.fragments.MoviesFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/darkBlue"
+        android:background="@color/black"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/darkBlue"
+            app:contentScrim="@color/black"
             app:layout_scrollFlags="scroll|enterAlways|snap">
 
             <LinearLayout
@@ -93,7 +93,7 @@
                     android:layout_marginBottom="4dp"
                     android:text="prev"
                     app:icon="@drawable/ic_previous"
-                    app:iconTint="@color/darkBlue"
+                    app:iconTint="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/prev_page_text"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -139,7 +139,7 @@
                     android:text="next"
                     app:icon="@drawable/ic_next"
                     app:iconGravity="end"
-                    app:iconTint="@color/darkBlue"
+                    app:iconTint="@color/black"
                     app:layout_constraintBottom_toBottomOf="@id/prev_btn"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/next_page_text"
