--- a/app/src/main/res/layout/fragment_search_movies.xml
+++ b/app/src/main/res/layout/fragment_search_movies.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBlue"
+    android:background="@color/black"
     tools:context=".presentation.ui.fragments.SearchMoviesFragment">
 
     <androidx.cardview.widget.CardView
