--- a/app/src/main/res/layout/movies_up_category_layout.xml
+++ b/app/src/main/res/layout/movies_up_category_layout.xml
@@ -27,7 +27,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
-                    android:backgroundTint="@color/darkBlue"
+                    android:backgroundTint="@color/black"
                     app:cardCornerRadius="12dp">
 
                     <ImageView
@@ -51,7 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
-                    android:backgroundTint="@color/darkBlue"
+                    android:backgroundTint="@color/black"
                     app:cardCornerRadius="12dp">
 
                     <ImageView
@@ -76,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
-                    android:backgroundTint="@color/darkBlue"
+                    android:backgroundTint="@color/black"
                     app:cardCornerRadius="12dp">
 
                     <ImageView
@@ -103,7 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
-                    android:backgroundTint="@color/darkBlue"
+                    android:backgroundTint="@color/black"
 
                     app:cardCornerRadius="12dp">
 
