--- a/app/src/main/res/layout/object_item_horizontal.xml
+++ b/app/src/main/res/layout/object_item_horizontal.xml
@@ -1,63 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
     android:layout_height="260dp"
     android:layout_margin="4dp"
-    android:backgroundTint="@color/colorAccent"
     app:cardCornerRadius="10dp"
-    app:cardElevation="6dp">
+    app:cardElevation="6dp"
+    app:strokeColor="@color/colorAccent"
+    app:strokeWidth="1dp">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="2dp"
-        app:cardCornerRadius="10dp">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/posterImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
 
-            <ImageView
-                android:id="@+id/posterImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
+        <com.vaibhavlakhera.circularprogressview.CircularProgressView
+            android:id="@+id/progressView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:animate="true"
+            app:animateDuration="800"
+            app:fillColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:progressColor="@color/green"
+            app:progressInterpolator="@android:anim/accelerate_decelerate_interpolator"
+            app:progressTextColor="@color/white"
+            app:progressTextEnabled="true"
+            app:progressTextSize="14sp"
+            app:progressTextType="percent"
+            app:progressValue="0"
+            app:progressWidth="5dp"
+            app:startAngle="270"
+            app:totalColor="@color/black"
+            app:totalValue="100"
+            app:totalWidth="8dp" />
 
-            <com.vaibhavlakhera.circularprogressview.CircularProgressView
-                android:id="@+id/progressView"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                app:animate="true"
-                app:animateDuration="800"
-                app:fillColor="@color/darkBlue"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:progressColor="@color/green"
-                app:progressInterpolator="@android:anim/accelerate_decelerate_interpolator"
-                app:progressTextColor="@color/white"
-                app:progressTextEnabled="true"
-                app:progressTextSize="14sp"
-                app:progressTextType="percent"
-                app:progressValue="0"
-                app:progressWidth="5dp"
-                app:startAngle="270"
-                app:totalColor="@color/darkBlue"
-                app:totalValue="100"
-                app:totalWidth="8dp" />
+        <ImageView
+            android:id="@+id/like"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/progressView"
+            app:layout_constraintStart_toStartOf="@+id/progressView"
+            app:layout_constraintTop_toTopOf="@+id/posterImage"
+            app:srcCompat="@drawable/ic_like_star" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/like"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="10dp"
-                app:layout_constraintBottom_toBottomOf="@+id/progressView"
-                app:layout_constraintStart_toStartOf="@+id/posterImage"
-                app:layout_constraintTop_toTopOf="@+id/progressView"
-                app:srcCompat="@drawable/ic_like_star" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
