--- a/app/src/main/res/layout/spinner_custom_item.xml
+++ b/app/src/main/res/layout/spinner_custom_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:textColor="@color/darkBlue"
+    android:textColor="@color/black"
     android:textSize="16sp"
     android:text="popular"
     android:textStyle="bold"
