--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/nav_movies"
@@ -8,14 +9,11 @@
     <item
         android:id="@+id/nav_search"
         android:icon="@drawable/ic_search"
-        android:title="Search movie" />
-
-
+        android:title="Search" />
     <item
         android:id="@+id/nav_person"
         android:icon="@drawable/ic_person"
         android:title="Person" />
-
     <item
         android:id="@+id/nav_storage"
         android:icon="@drawable/ic_tv"
