--- a/app/src/main/res/navigation/general_navigation.xml
+++ b/app/src/main/res/navigation/general_navigation.xml
@@ -3,28 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/general_navigation"
-    app:startDestination="@id/rootFragment">
-
-    <fragment
-        android:id="@+id/rootFragment"
-        android:name="com.example.mymovieapp.presentation.ui.fragments.RootFragment"
-        android:label="fragment_root"
-        tools:layout="@layout/fragment_root" >
-        <action
-            android:id="@+id/action_rootFragment_to_movieDetailsFragment"
-            app:destination="@id/movieDetailsFragment" />
-    </fragment>
+    app:startDestination="@id/nav_movies">
 
     <fragment
         android:id="@+id/nav_movies"
         android:name="com.example.mymovieapp.presentation.ui.fragments.MoviesFragment"
         android:label="fragment_movies"
-        tools:layout="@layout/fragment_movies" />
+        tools:layout="@layout/fragment_movies" >
+        <action
+            android:id="@+id/action_nav_movies_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/nav_search"
         android:name="com.example.mymovieapp.presentation.ui.fragments.SearchMoviesFragment"
         android:label="fragment_search_movies"
-        tools:layout="@layout/fragment_search_movies" />
+        tools:layout="@layout/fragment_search_movies" >
+        <action
+            android:id="@+id/action_nav_search_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/nav_person"
         android:name="com.example.mymovieapp.presentation.ui.fragments.ActorsFragment"
@@ -34,7 +32,11 @@
         android:id="@+id/nav_storage"
         android:name="com.example.mymovieapp.presentation.ui.fragments.StorageMoviesFragment"
         android:label="fragment_favorite_movies"
-        tools:layout="@layout/fragment_storage_movies" />
+        tools:layout="@layout/fragment_storage_movies" >
+        <action
+            android:id="@+id/action_nav_storage_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/movieDetailsFragment"
         android:name="com.example.mymovieapp.presentation.ui.fragments.MovieDetailsFragment"
