--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,18 +5,17 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorAccent">#E91E63</color>
+    <color name="colorAccent">#21E807</color>
     <color name="yellow">#D5C42F</color>
     <color name="whiteTransparent">#B2FFFFFF</color>
     <color name="green">#7EC52C</color>
     <color name="red">#E81313</color>
     <color name="gold">#E4FF9800</color>
 
-    <color name="darkBlue">#1b0f30</color>
+    <color name="black">#000000</color>
     <color name="darkBlue1">#271447</color>
-    <color name="lightBlue">#3c2766</color>
+    <color name="lightBlue">#1F113C</color>
     <color name="movie_category_color">#D303DAC5</color>
 
 </resources>
